force-app/main/default/objects/Case/fields/Advisory_Opinion_Request__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Opinion_Request__c</fullName>
    <label>Advisory Opinion Request?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>