force-app/main/default/objects/Case/fields/agf__ADM_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__ADM_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
    <label>Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>AgileAcceleratorCases</relationshipName>
    <type>Lookup</type>
</CustomField>