force-app/main/default/objects/Case/fields/Are_there_any_FOIA_Compliance_Issues__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_FOIA_Compliance_Issues__c</fullName>
    <label>Are there any FOIA Compliance Issues?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>