force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF(AND(IsClosed, RecordType.Name = &quot;OGIS&quot;),
  CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
    0 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
    1 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
    2 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
    3 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
    4 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
    5 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
    6 , CASE( MOD(DateClosed__c - DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
    999 
  ) + (FLOOR((DateClosed__c- DATEVALUE(CreatedDate))/7)*5 - Holiday_Counter_Closed__c) 
  , 
  CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
    0 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
    1 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
    2 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
    3 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
    4 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
    5 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
    6 , CASE( MOD(TODAY() - DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
    999 
  ) + (FLOOR((TODAY() - DATEVALUE(CreatedDate))/7)*5 - Holiday_Counter_Open__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>