force-app/main/default/objects/Case/fields/Case_Age_Alert__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Alert__c</fullName>
    <formula>IF(RecordType.Name = &quot;OGIS&quot;,
IF(AND(Case_Age__c &gt; 7,  IsBlank(Date_of_Initial_Contact_Customer_Agency__c)),
IMAGE(&quot;/img/samples/color_red.gif&quot;,
&quot;RED&quot;, 15,50),
IF(AND(Case_Age__c &lt; 8,  IsBlank(Date_of_Initial_Contact_Customer_Agency__c)),
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,
&quot;YELLOW&quot;, 15,50 ),
IF(AND(Case_Age__c &gt; 0, NOT(IsBlank(Date_of_Initial_Contact_Customer_Agency__c))),
IMAGE(&quot;/img/samples/color_green.gif&quot;,
&quot;GREEN&quot;, 15,50),&quot; &quot;))), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age Alert</label>
    <type>Text</type>
</CustomField>