force-app/main/default/objects/Case/fields/Case_Age_Color_Alert__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Color_Alert__c</fullName>
    <formula>IF(RecordType.Name = &quot;OGIS&quot;,
IF(AND(Case_Age__c &gt; 7, IsBlank(Date_of_Initial_Contact_Customer_Agency__c)),
&quot;RED - Not Contacted&quot;,
IF(AND(Case_Age__c &gt; 0, NOT(IsBlank(Date_of_Initial_Contact_Customer_Agency__c))),
&quot;GREEN - Contacted&quot;,
IF(AND(Case_Age__c &lt; 8, IsBlank(Date_of_Initial_Contact_Customer_Agency__c)),
&quot;YELLOW - Not Contacted&quot;,
null))), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age Color Alert</label>
    <type>Text</type>
</CustomField>