force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Issue</fullName>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>General OGIS Assistance</fullName>
            </value>
            <value>
                <fullName>FOIA Process Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>