force-app/main/default/objects/Case/fields/Case_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Case_Subcategory__c</fullName>
    <label>Case _Subcategory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Practices</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Exemption Application</fullName>
            </value>
            <value>
                <fullName>Expedited Processing</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Misdirected Request/Appeal/Correspondence</fullName>
            </value>
            <value>
                <fullName>Need Docs</fullName>
            </value>
            <value>
                <fullName>No records</fullName>
            </value>
            <value>
                <fullName>Non-FOIA</fullName>
            </value>
            <value>
                <fullName>Scope of Request/Search Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>