force-app/main/default/objects/Case/fields/Comments1__c.field-meta.xml
<CustomField>
    <fullName>Comments1__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>