force-app/main/default/objects/Case/fields/Comments3__c.field-meta.xml
<CustomField>
    <fullName>Comments3__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>