force-app/main/default/objects/Case/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>TEXT(Contact.RRS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>