force-app/main/default/objects/Case/fields/Contact_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Color__c</fullName>
    <formula>Contact.RRS_Access__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>