force-app/main/default/objects/Case/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <formula>IF(RecordType.Name = &apos;OGIS&apos;, Contact.RecordType.Name, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>