force-app/main/default/objects/Case/fields/Controlled_Action_Number__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Action_Number__c</fullName>
    <label>Controlled Action Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>