force-app/main/default/objects/Case/fields/Controlled_Action_Number_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Action_Number_Hyperlink__c</fullName>
    <description>Controlled Action Number Hyperlink</description>
    <formula>HYPERLINK(&quot;/&quot;+Id,Controlled_Action_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controlled Action Number</label>
    <type>Text</type>
</CustomField>