force-app/main/default/objects/Case/fields/Current_Check_Out_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Current_Check_Out_Quantity__c</fullName>
    <label>Current Check-Out Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>