force-app/main/default/objects/Case/fields/Date_and_Time_Prepared__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_Prepared__c</fullName>
    <label>Date and Time Prepared</label>
    <type>DateTime</type>
</CustomField>