force-app/main/default/objects/Case/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <description>To capture Date Assigned when owner of the case is changed</description>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>