force-app/main/default/objects/Case/fields/Date_of_Initial_Contact_Customer_Agency__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Contact_Customer_Agency__c</fullName>
    <label>Date of Initial Contact Customer/Agency</label>
    <type>Date</type>
</CustomField>