force-app/main/default/objects/Case/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>