force-app/main/default/objects/Case/fields/DateClosed__c.field-meta.xml
<CustomField>
    <fullName>DateClosed__c</fullName>
    <label>Date_Closed</label>
    <type>Date</type>
</CustomField>