force-app/main/default/objects/Case/fields/DateLogged__c.field-meta.xml
<CustomField>
    <fullName>DateLogged__c</fullName>
    <label>Date_Logged</label>
    <type>Date</type>
</CustomField>