force-app/main/default/objects/Case/fields/Dept_or_Agency_and_Component__c.field-meta.xml
<CustomField>
    <fullName>Dept_or_Agency_and_Component__c</fullName>
    <label>Dept or Agency and Component</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown Not Applicable</fullName>
            </value>
            <value>
                <fullName>Commerce: Bureau of Economic Analysis/Economic and Statistics Administration</fullName>
            </value>
            <value>
                <fullName>Commerce: Bureau of Industry and Security</fullName>
            </value>
            <value>
                <fullName>Commerce: Bureau of the Census</fullName>
            </value>
            <value>
                <fullName>Commerce: Economic Development Administration</fullName>
            </value>
            <value>
                <fullName>Commerce: International Trade Administration</fullName>
            </value>
            <value>
                <fullName>Commerce: Minority Business Development Agency</fullName>
            </value>
            <value>
                <fullName>Commerce: National Institute of Standards and Technology</fullName>
            </value>
            <value>
                <fullName>Commerce: National Oceanic and Atmospheric Administration</fullName>
            </value>
            <value>
                <fullName>Commerce: National Technical Information Service</fullName>
            </value>
            <value>
                <fullName>Commerce: National Telecommunications and Information Administration</fullName>
            </value>
            <value>
                <fullName>Commerce: Office of Inspector General</fullName>
            </value>
            <value>
                <fullName>Commerce: Office of the Secretary</fullName>
            </value>
            <value>
                <fullName>Commerce: US Patent and Trademark Office</fullName>
            </value>
            <value>
                <fullName>DHS: Assistant Secretary for Policy</fullName>
            </value>
            <value>
                <fullName>DHS: Citizenship and Immigration Services</fullName>
            </value>
            <value>
                <fullName>DHS: Coast Guard</fullName>
            </value>
            <value>
                <fullName>DHS: Customs and Border Protection</fullName>
            </value>
            <value>
                <fullName>DHS: Director for Operations Coordination</fullName>
            </value>
            <value>
                <fullName>DHS: Federal Emergency Management Agency</fullName>
            </value>
            <value>
                <fullName>DHS: Federal Law Enforcement Training Center</fullName>
            </value>
            <value>
                <fullName>DHS: Headquarters and Privacy Office</fullName>
            </value>
            <value>
                <fullName>DHS: Immigration and Customs Enforcement</fullName>
            </value>
            <value>
                <fullName>DHS: National Protection and Programs Directorate</fullName>
            </value>
            <value>
                <fullName>DHS: Office of Biometric Identity Management (OBIM)</fullName>
            </value>
            <value>
                <fullName>DHS: Office of Civil Rights and Civil Liberties</fullName>
            </value>
            <value>
                <fullName>DHS: Office of General Counsel</fullName>
            </value>
            <value>
                <fullName>DHS: Office of Inspector General</fullName>
            </value>
            <value>
                <fullName>DHS: Secret Service</fullName>
            </value>
            <value>
                <fullName>DHS: Transportation Security Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>