force-app/main/default/objects/Case/fields/ECT_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>ECT_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>