force-app/main/default/objects/Case/fields/ECT_CaseLink__c.field-meta.xml
<CustomField>
    <fullName>ECT_CaseLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,    Subject  , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseLink</label>
    <type>Text</type>
</CustomField>