force-app/main/default/objects/Case/fields/ECT_Comment__c.field-meta.xml
<CustomField>
    <fullName>ECT_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>