force-app/main/default/objects/Case/fields/ECTOwner__c.field-meta.xml
<CustomField>
    <fullName>ECTOwner__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECTOwner</label>
    <type>Checkbox</type>
</CustomField>