force-app/main/default/objects/Case/fields/Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Entry_Number__c</fullName>
    <label>Entry Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>