force-app/main/default/objects/Case/fields/Exemptions__c.field-meta.xml
<CustomField>
    <fullName>Exemptions__c</fullName>
    <label>Exemptions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>