force-app/main/default/objects/Case/fields/Final_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Deadline_Date__c</fullName>
    <label>Final Deadline Date</label>
    <type>Date</type>
</CustomField>