force-app/main/default/objects/Case/fields/FOIA_Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>FOIA_Request_Stage__c</fullName>
    <label>FOIA Request Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Final Determination</fullName>
            </value>
            <value>
                <fullName>Appeal Filed</fullName>
            </value>
            <value>
                <fullName>PreFOIA</fullName>
            </value>
            <value>
                <fullName>Release Determinations</fullName>
            </value>
            <value>
                <fullName>Remand</fullName>
            </value>
            <value>
                <fullName>Request Filed</fullName>
            </value>
            <value>
                <fullName>Unknown/NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>