force-app/main/default/objects/Case/fields/Holiday_Counter_Date_of_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Counter_Date_of_Initial_Contact__c</fullName>
    <label>Holiday Counter Date of Initial Contact</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>