force-app/main/default/objects/Case/fields/Holiday_Counter_Open__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Counter_Open__c</fullName>
    <label>Holiday Counter Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>