force-app/main/default/objects/Case/fields/Holiday_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Date_Closed__c</fullName>
    <label>Holiday Date Closed</label>
    <type>DateTime</type>
</CustomField>