force-app/main/default/objects/Case/fields/Holiday_Date_Holder__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Date_Holder__c</fullName>
    <label>Holiday Date Holder</label>
    <type>Date</type>
</CustomField>