force-app/main/default/objects/Case/fields/HolidayDateHolder__c.field-meta.xml
<CustomField>
    <fullName>HolidayDateHolder__c</fullName>
    <label>HolidayDateHolder</label>
    <type>DateTime</type>
</CustomField>