force-app/main/default/objects/Case/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procedural Question</fullName>
                <default>true</default>
                <label>Procedural Question</label>
            </value>
            <value>
                <fullName>Draft Review</fullName>
            </value>
            <value>
                <fullName>Delivery Information</fullName>
            </value>
            <value>
                <fullName>Add/Remove User Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>