force-app/main/default/objects/Case/fields/Is_Time_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Is_Time_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable a Staff assistant to flag Cases that are time sensitive</description>
    <label>Is Time Sensitive?</label>
    <type>Checkbox</type>
</CustomField>