force-app/main/default/objects/Case/fields/On_Behalf_of_Customer_Representative__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_of_Customer_Representative__c</fullName>
    <label>&quot;On Behalf of” Customer Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>