force-app/main/default/objects/Case/fields/Previous_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Case_Number__c</fullName>
    <label>Previous Case Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>