force-app/main/default/objects/Case/fields/PULLDB_Location__c.field-meta.xml
<CustomField>
    <fullName>PULLDB_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to identify room request was made from.</inlineHelpText>
    <label>Location</label>
    <referenceTo>RRS_Access_Location__c</referenceTo>
    <relationshipLabel>Inquiry</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>