force-app/main/default/objects/Case/fields/PULLDB_Pull__c.field-meta.xml
<CustomField>
    <fullName>PULLDB_Pull__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link to the pull record that was created from the inquiry.</description>
    <label>Pull</label>
    <referenceTo>PULLDB_Pull__c</referenceTo>
    <relationshipLabel>Inquiries</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>