force-app/main/default/objects/Case/fields/PULLDB_Pull_Time__c.field-meta.xml
<CustomField>
    <fullName>PULLDB_Pull_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pull Time</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PULLDB_Pull_Time__c.Access_Location__c</field>
            <operation>equals</operation>
            <valueField>$Source.PULLDB_Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PULLDB_Pull_Time__c</referenceTo>
    <relationshipLabel>Inquiries</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>