force-app/main/default/objects/Case/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Case Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>