force-app/main/default/objects/Case/fields/Record_Retention__c.field-meta.xml
<CustomField>
    <fullName>Record_Retention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Retention</label>
    <referenceTo>GC_Record_Retention__c</referenceTo>
    <relationshipLabel>Related Case Records</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>