force-app/main/default/objects/Case/fields/Researcher_Name__c.field-meta.xml
<CustomField>
    <fullName>Researcher_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Researcher Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>