force-app/main/default/objects/Case/fields/RSS_Identification_Status__c.field-meta.xml
<CustomField>
    <fullName>RSS_Identification_Status__c</fullName>
    <label>RSS Identification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Banned</fullName>
            </value>
            <value>
                <fullName>3 day Purge</fullName>
            </value>
            <value>
                <fullName>30 day Purge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>