force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>