force-app/main/default/objects/Case/fields/Template_Enter_if_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Template_Enter_if_Relevant__c</fullName>
    <label>Template No.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>02 Misdirect</fullName>
            </value>
            <value>
                <fullName>03 Needs Documents</fullName>
            </value>
            <value>
                <fullName>06 Exemption 3-EEOC</fullName>
            </value>
            <value>
                <fullName>07 Exemption 3 - Grand Jury</fullName>
            </value>
            <value>
                <fullName>08 Exemption 7A</fullName>
            </value>
            <value>
                <fullName>09 Exemption 1 and 3 CIA</fullName>
            </value>
            <value>
                <fullName>10 Exemption 6 and 7C</fullName>
            </value>
            <value>
                <fullName>12 FBI Search</fullName>
            </value>
            <value>
                <fullName>13 Search/No Records</fullName>
            </value>
            <value>
                <fullName>15 Status Letter</fullName>
            </value>
            <value>
                <fullName>16 Glomar 6 and 7C</fullName>
            </value>
            <value>
                <fullName>17 Need to Appeal</fullName>
            </value>
            <value>
                <fullName>18 Constructive Denial</fullName>
            </value>
            <value>
                <fullName>19 OGIS Will On Respond to FOIA Related Correspondence</fullName>
            </value>
            <value>
                <fullName>20 Agency Declines to Provide EDC</fullName>
            </value>
            <value>
                <fullName>21 IRS Tax Info FOIA Request</fullName>
            </value>
            <value>
                <fullName>22 Status - Contact FPL</fullName>
            </value>
            <value>
                <fullName>25 No Appeal Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>