force-app/main/default/objects/Case/fields/Today_s_Date_Holder__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date_Holder__c</fullName>
    <label>Today&apos;s Date Holder</label>
    <type>Date</type>
</CustomField>